--- a/mallchat-common/src/main/resources/application-test.properties
+++ b/mallchat-common/src/main/resources/application-test.properties
@@ -1,14 +1,14 @@
 #todo 记得把这些配置信息补充了
 ##################mysql配置##################
-mallchat.mysql.ip=127.0.0.1
+mallchat.mysql.ip=8.142.94.217
 mallchat.mysql.port=3306
 mallchat.mysql.db=mallchat
 mallchat.mysql.username=root
-mallchat.mysql.password=123456
+mallchat.mysql.password=kps123456
 ##################redis配置##################
-mallchat.redis.host=127.0.0.1
+mallchat.redis.host=8.142.94.217
 mallchat.redis.port=6379
-mallchat.redis.password=123456
+mallchat.redis.password=zFsegtHe3g39Cq
 ##################jwt##################
 mallchat.jwt.secret=dsfsdfsdfsdfsd
 ##################微信公众号信息##################
@@ -27,10 +27,12 @@ oss.access-key=BEZ213
 oss.secret-key=Ii4vCMIXuFe241dsfEZ8e7RXI2342342kV
 oss.bucketName=default
 ##################gpt配置##################
-mallchat.chatgpt.use=false
+mallchat.chatgpt.use=true
 mallchat.chatgpt.uid=10001
-mallchat.chatgpt.key=sk-wvWM0xGcxFfsddfsgxixbXK5tHovM
-mallchat.chatgpt.proxyUrl=https://123.cc
+mallchat.chatgpt.key=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
+mallchat.chatgpt.proxyUrl=
 mallchat.chatglm2.use=false
 mallchat.chatglm2.url=http://v32134.cc
 mallchat.chatglm2.uid=10002
+
+#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
